控制项目配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 #Unity File
-Library/
+Library/metadata
+Library/ScriptAssemblies
+Library/ShaderCache
+Library/UnityAssemblies
 obj/
 Temp/
 *.csproj
